SAK-17243 EMI Updates after Merge and Refactoring
git-svn-id: https://source.sakaiproject.org/svn/sam/branches/SAK-17243@73072 66ffb92e-73f9-0310-93c1-f5514f145a0a